# Tiara

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json
app/: devbox.json
app/TiaraMobileApp/: .env.example  .eslintrc.js  App.tsx  app.json  env.d.ts  package-lock.json  package.json  tsconfig.json
app/TiaraMobileApp/interfaces/: Major.ts
app/TiaraMobileApp/src/components/: CardItem.tsx  CardItemHorizontal.tsx  FilterComponent.tsx  FilterSearch.tsx  ScreenWrapper.tsx  SearchBox.tsx  SectionComponent.tsx
app/backend/: .env.example  Dockerfile  eslint.config.mjs  generateKeyPair.js  jest.config.js  package-lock.json  package.json  tsconfig.json
app/backend/prisma/: initial_data.json  schema.prisma  seed.ts
app/backend/src/: server.ts  utils.ts
app/common/: index.ts  package-lock.json  package.json  tsconfig.json
app/common/DTOs/: dtos.ts
app/common/interfaces/: FIeldOfInterest.ts  Faculty.ts  IMajor.ts  Major.ts  University.ts  User.ts
ml/: .pre-commit-config.yaml  Dockerfile  devbox.json  pyproject.toml
ml/.dvc/: config
ml/data/input/: .gitignore  agh.json.dvc  ela_data.json  ela_full.json.dvc  ela_full_merged.json.dvc  initial_input.json  perspektywy.json.dvc
ml/data/input/radon/: .gitignore  merged.json.dvc
ml/data_scrapping/: ela_scrapper.py  merge_json_data.py  scrap_perspektywy.py  scrap_university_sites.py
ml/notebooks/: ela_scrapper.ipynb  llm.ipynb  notebook.ipynb
ml/src/: db.py  download_data.sh  ela_scrapper.py  embedding_api.py  insert_embeedings.py  llm.py  models.py  scrap_university_sites.py
(+30 files in other folders)
