[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "ipykernel>=6.29.5",
    "langchain>=0.0.27",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "scikit-learn>=1.5.2",
    "transformers>=4.45.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.uv.packages]
packages = [
    { include = "ml", from = "src" }
]
