[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "langchain>=0.0.27",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.1.1",
    "transformers>=4.45.1",
    "uvicorn>=0.31.0",
    "psycopg>=3.2.2",
]

[tool.uv]
dev-dependencies = [
    "dvc[gdrive]>=3.55.2",
    "ipykernel>=6.29.5",
    "pathspec>=0.12.1",
]

[tool.uv.packages]
packages = [
    { include = "ml", from = "src" }
]
